@@ -33,6 +33,7 @@ public:
   bool rcfiles;
   bool diffs;
   bool no_merges;
+  bool verbose;
   options_map options;
   utf8 message;
   utf8 message_file;
@@ -79,6 +80,7 @@ public:
 
   void set_stdhooks(bool b);
   void set_rcfiles(bool b);
+  void set_verbose(bool b);
   void add_rcfile(utf8 const & filename);
 
   explicit app_state();
