@@ -1,4 +1,3 @@
-2005-06-05  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	* netsync.cc, netcmd.cc: Style cleanups (mostly whitespace).
 
@@ -45,6 +44,14 @@
 	* rcs_import.cc 
 	(note_state_at_branch_beginning): Move time back when
 	there are known commits on a branch.
+
+2005-06-03  Joel Reed  <joelwreed@comcast.com>
+
+	* commands.cc, monotone.texi: provide --verbose option for 
+	monotone complete revision which adds date and author 
+	completion output
+	* contrib/monotone.zsh_completion: use verbose output when
+	completing revisions
 
 2005-06-02  graydon hoare  <graydon@pobox.com>
 
@@ -4789,7 +4796,7 @@
 	* AUTHORS: Mention Wojciech and Neil.
 	* revision.cc (calculate_ancestors_from_graph): Make non-recursive.
 
-2005-01-17  Wojciech MiÅkowski  <wmilkowski@interia.pl>
+2005-01-17  Wojciech MiÃkowski  <wmilkowski@interia.pl>
 
 	* std_hooks.lua: Teach about meld.
 
